[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claude-code-robin"
version = "0.1.0"
description = "Read your codebase like Robin reads Poneglyphs — Python project architecture analyzer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "anxiong2025" },
]
keywords = ["architecture", "analyzer", "python", "cli", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "anthropic>=0.80.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.35.0"]
dev = ["pytest>=8.0"]

[project.scripts]
claude-code-robin = "src.main:main"

[project.urls]
Homepage = "https://github.com/anxiong2025/claude-code-robin"
Repository = "https://github.com/anxiong2025/claude-code-robin"
Issues = "https://github.com/anxiong2025/claude-code-robin/issues"
